// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SNManualEntry renders correctly 1`] = `
<BrowserRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ManualEntryForm
        serialNumber=""
      >
        <form
          className="sn-manual-entry"
          onSubmit={[Function]}
        >
          <div
            className="is-flex file buttons-container"
          >
            <div
              className="ifield mr-10"
            >
              <Component
                autoComplete="barcode"
                className="field-barcode"
                input={
                  Object {
                    "name": "barcode",
                    "onBlur": [Function],
                    "onChange": [Function],
                    "onFocus": [Function],
                    "pattern": "\\\\d*",
                    "value": "",
                  }
                }
                meta={
                  Object {
                    "active": false,
                    "data": Object {},
                    "dirty": false,
                    "dirtySinceLastSubmit": false,
                    "error": undefined,
                    "initial": "",
                    "invalid": false,
                    "length": undefined,
                    "modified": false,
                    "pristine": true,
                    "submitError": undefined,
                    "submitFailed": false,
                    "submitSucceeded": false,
                    "submitting": false,
                    "touched": false,
                    "valid": true,
                    "validating": false,
                    "visited": false,
                  }
                }
                placeholder="ENTER_SERIAL_MANUALLY"
                type="number"
              >
                <div
                  className="field"
                >
                  <p
                    className="control"
                  >
                    <input
                      autoComplete="barcode"
                      className="input field-barcode"
                      disabled={false}
                      id="barcode"
                      name="barcode"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      pattern="\\\\d*"
                      placeholder="ENTER_SERIAL_MANUALLY"
                      type="number"
                      value=""
                    />
                  </p>
                </div>
              </Component>
            </div>
            <button
              className="button is-paddingless is-primary has-text-weight-bold is-uppercase is-outlined"
              disabled={true}
              type="submit"
            >
              ADD
            </button>
          </div>
        </form>
      </ManualEntryForm>
    </Provider>
  </Router>
</BrowserRouter>
`;

exports[`SNManualEntry renders correctly when editing a serial number 1`] = `
<BrowserRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ManualEntryForm
        serialNumber="123456789123"
      >
        <form
          className="sn-manual-entry"
          onSubmit={[Function]}
        >
          <div
            className="is-flex file buttons-container"
          >
            <div
              className="ifield mr-10"
            >
              <Component
                autoComplete="barcode"
                className="field-barcode"
                input={
                  Object {
                    "name": "barcode",
                    "onBlur": [Function],
                    "onChange": [Function],
                    "onFocus": [Function],
                    "pattern": "\\\\d*",
                    "value": "123456789123",
                  }
                }
                meta={
                  Object {
                    "active": false,
                    "data": Object {},
                    "dirty": false,
                    "dirtySinceLastSubmit": false,
                    "error": undefined,
                    "initial": "123456789123",
                    "invalid": false,
                    "length": undefined,
                    "modified": false,
                    "pristine": true,
                    "submitError": undefined,
                    "submitFailed": false,
                    "submitSucceeded": false,
                    "submitting": false,
                    "touched": false,
                    "valid": true,
                    "validating": false,
                    "visited": false,
                  }
                }
                placeholder="ENTER_SERIAL_MANUALLY"
                type="number"
              >
                <div
                  className="field"
                >
                  <p
                    className="control"
                  >
                    <input
                      autoComplete="barcode"
                      className="input field-barcode"
                      disabled={false}
                      id="barcode"
                      name="barcode"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      pattern="\\\\d*"
                      placeholder="ENTER_SERIAL_MANUALLY"
                      type="number"
                      value="123456789123"
                    />
                  </p>
                </div>
              </Component>
            </div>
            <button
              className="button is-paddingless is-primary has-text-weight-bold is-uppercase is-outlined"
              disabled={false}
              type="submit"
            >
              SAVE
            </button>
          </div>
        </form>
      </ManualEntryForm>
    </Provider>
  </Router>
</BrowserRouter>
`;
